luci-theme-bootstrap: fix mobile input cutoff in dropdowns
Fixes: #3285
(cherry picked from commit e8abe15483e6e740ed8efae32c2382f999a94a8f)

--- a/themes/luci-theme-bootstrap/htdocs/luci-static/bootstrap/mobile.css
+++ b/themes/luci-theme-bootstrap/htdocs/luci-static/bootstrap/mobile.css
@@ -177,9 +177,11 @@ header h3 a, header .brand {
 		margin: 0;
 	}
 
-	input, textarea, select {
+	input, textarea, select,
+	.cbi-dropdown > ul > li input[type="text"] {
 		font-size: 16px !important;
 		line-height: 28px;
+		height: auto;
 	}
 
 	select, input[type="text"], input[type="password"] {
